# OuSpark

./: .gitignore  404.html  PrivacyPolicies.md  README.md  TermsAndConditions.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs_ci.yaml
AutomationDevOps/automation/: index.html
ProjectOverview/architecture/: index.html
ProjectOverview/problem-statement/: index.html
SystemArchitecture/backend/: index.html
SystemArchitecture/frontend/: index.html
SystemArchitecture/pipeline/: index.html
TechJourney/history/: index.html
TechJourney/tech-stack/: index.html
docs/: index.md
docs/AutomationDevOps/: automation.md
docs/ProjectOverview/: architecture.md  problem-statement.md
docs/SystemArchitecture/: backend.md  frontend.md  pipeline.md
docs/TechJourney/: history.md  tech-stack.md
docs/assets/: features.riv
docs/stylesheets/: extra-timeline.css  extra.css
notifications/: AppAvailable.json  AppComingSoon.json  NewResults.riv  NewResultsLive.json  NewResults_v2.riv  NewUpdatePS.json  Rate Us Now.json  RateUsPS.json  SpaceCoffee.riv  StudentRanking.json
overrides/: main.html
search/: search_index.json
